<resources>
    <string name="app_name">5_Lv4</string>
    <string name="tv_login">登录</string>
    <string name="tv_register">注册</string>
    <string name="tv_welcome">您好，欢迎来到知乎日报！</string>
    <string name="et_user">请输入账号</string>
    <string name="et_password">请输入密码</string>
    <string name="et_verify_password">请再次输入密码</string>
    <string name="tv_sina">新浪微博登陆</string>
    <string name="tv_tencent">腾讯微博登录</string>
    <string name="tv_user_agreement">同意用户协议</string>
    <string name="tv_register_now">没有账号？立即注册</string>
    <string name="tv_account_format">账号格式为2-8位字母或数字</string>
    <string name="tv_password_format">密码格式为6-12位字母或数字</string>
    <string name="tv_remember_password">记住密码</string>

</resources>